--- a/_sass/simple-texture-home.scss
+++ b/_sass/simple-texture-home.scss
@@ -12,7 +12,7 @@ body {
     font-size: 18px;
     line-height: 36px;
 
-    color: $color-text-dark;
+    color: #c4c4c4;
 }
 
 h1 {
@@ -80,11 +80,11 @@ textarea {
 }
 
 #section0 {
-    background: url('../images/theme/noisy_texture_section0-200x200.png') repeat 0 0 #F0F0F0;
+    background: url('../images/theme/noisy_texture_section1-200x200.png') repeat 0 0 #080808;
 }
 
 #section1 {
-    background: url('../images/theme/noisy_texture_section1-200x200.png') repeat 0 0 #150E1F;
+    background: url('../images/theme/noisy_texture_section0-200x200.png') repeat 0 0 #F0F0F0;
 }
 
 #fullPage-nav {
