--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,11 +15,11 @@
 
 <body>
     <ul id="menu">
-        <li data-menuanchor="bio"><a href="#bio">Biography</a></li>
-        <li data-menuanchor="social"><a href="#social">Social Links</a></li>
+        <li data-menuanchor="home"><a href="#home">Heading</a></li>
+        <li data-menuanchor="events"><a href="#events">Events</a></li>
     </ul>
 
-    <div id="section0" class="section" data-name="bio">
+    <div id="section0" class="section" data-name="home">
 
         {% include common/notices.html %}
 
@@ -31,20 +31,12 @@
         <a class="btn-continue animated bounce" title="{{ site.data.i18n[site.lang].more }}" href="#social"></a>
     </div>
 
-    <div id="section1" class="section" data-name="social">
+    <div id="section1" class="section" data-name="events">
         <h1 class="animated hidden">
-            <a class="btn-enter btn-light" title="{{ site.data.i18n[site.lang].enter_blog }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
+            <a class="btn-enter btn-dark" title="{{ site.data.i18n[site.lang].enter_blog }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
         </h1>
         <div class="social-links animated hidden">
-            <a class="btn-light ico-rss" href="{{ site.baseurl }}/feed.xml" rel="me" target="_blank" title="feed"></a>
-            {% if site.author.email %}
-                <a class="btn-light ico-gmail" href="mailto:{{ site.author.email }}" rel="me" target="_blank" title="email"></a>
-            {% endif %}
-            {% for link in site.author.social_links %}
-                {% if link.url %}
-                    <a class="btn-light ico-{{ link.name }}" href="{{ link.url }}" rel="me" target="_blank" title="{{ link.name }}"></a>
-                {% endif %}
-            {% endfor %}
+            
         </div>
     </div>
 
