--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,11 +32,14 @@
     </div>
 
     <div id="section1" class="section" data-name="events">
-        <h1 class="animated hidden">
+        <h1 class="animated hidden main-links">
             <a class="btn-enter btn-dark" title="{{ site.data.i18n[site.lang].enter_blog }}" href="{{ site.paths.blog | relative_url }}">{{ site.data.i18n[site.lang].enter_blog }}</a>
         </h1>
+        <h1 class="animated hidden main-links">
+            <a class="btn-enter btn-dark" title="Support" href="/give">Support</a>
+        </h1>
         <div class="social-links animated hidden">
-            
+
         </div>
     </div>
 
