--- a/_layouts/give.html
+++ b/_layouts/give.html
@@ -18,9 +18,9 @@
   <section id="testimonials">
 <h4 class="sec-head">The Bible has a lot to say about prudence with our finances&hellip;</h4>
 <div class="cust-quotes">
-  <blockquote data-timeout="4800"><p>Each of you should give what you have decided in your heart to give, not reluctantly or under compulsion, for God loves a cheerful giver.</p><cite>2 Corinthians 9:7</cite></blockquote>
-  <blockquote data-timeout="4800"><p>A gift opens the way; and ushers the giver into the presence of the great.</p><cite>Proverbs 18:16</cite></blockquote>
-  <blockquote data-timeout="4800"><p>A generous person will prosper; whoever refreshes others will be refreshed.</p><cite>Proverbs 11:25</cite></blockquote>
+  {% for quote in page.quotes %}
+    <blockquote data-timeout="4800"><p>{{quote.text}}</p><cite>{{quote.verse}}</cite></blockquote>
+  {% endfor %}
 </div>
   </section>
 <div class="giving-footer"><p class="giving"> If you feel directed to support this ministry, contact <a href="mailto:beboldstreetministires@gmail.com">beboldstreetministries@gmail.com</a> to find out how.</p></div>
