removed intro mentioning money, add clothing and hygine.

--- a/_layouts/give.html
+++ b/_layouts/give.html
@@ -16,7 +16,7 @@
 
 <body>
   <section id="testimonials">
-<h4 class="sec-head">The Bible has a lot to say about prudence with our finances&hellip;</h4>
+
 <div class="cust-quotes">
   {% for quote in page.quotes %}
     <blockquote data-timeout="4800"><p>{{quote.text}}</p><cite>{{quote.verse}}</cite></blockquote>
@@ -24,6 +24,7 @@
 </div>
   </section>
 <div class="giving-footer"><p class="giving"> If you feel directed to support this ministry, contact <a href="mailto:beboldstreetministires@gmail.com">beboldstreetministries@gmail.com</a> to find out how.</p></div>
+<div class="giving-footer"><p class="giving">We currently can using donations of clothing and hygine.</p></div>
 </body>
 
 </html>
