--- a/_layouts/give.html
+++ b/_layouts/give.html
@@ -24,7 +24,7 @@
 </div>
   </section>
 <div class="giving-footer"><p class="giving"> If you feel directed to support this ministry, contact <a href="mailto:beboldstreetministires@gmail.com">beboldstreetministries@gmail.com</a> to find out how.</p></div>
-<div class="giving-footer"><p class="giving">We currently can using donations of clothing and hygine.</p></div>
+<div class="giving-footer"><p class="giving">We currently can use donations of clothing and hygine.</p></div>
 </body>
 
 </html>
