facebook mobile fix

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -38,8 +38,8 @@
         <h1 class="animated hidden main-links">
             <a class="btn-enter btn-dark" title="Support" href="/give">Support</a>
         </h1>
-        <div class="animated">
-          <a href="https://www.facebook.com/BeBoldStreetMinistry/"><img src="/assets/images/theme/facebook.png"></a>
+        <div class=" animated main-links">
+          <a href="https://www.facebook.com/BeBoldStreetMinistry/"><img src="/assets/images/theme/facebook.jpg"></a>
         </div>
     </div>
 
