--- a/_layouts/give.html
+++ b/_layouts/give.html
@@ -24,12 +24,11 @@
 </div>
   </section>
 <div class="giving-footer"><p class="giving"> If you feel directed to support this ministry, contact <a href="mailto:beboldstreetministires@gmail.com">beboldstreetministries@gmail.com</a> to find out how.</p></div>
-<div class="giving-footer"><p class="giving">We currently can use donations of clothing and hygiene.</p></div>
 <div class="giving-footer"><p class="giving">As a fully non-profit Christian organization we are
   supported by people's generosity.  People just like you make the difference in our community.
   We meet the needs of the desperate and homeless with the hope of a risen Savior.</p>
   <p class="giving">If that sounds like something you want to spend your time or treasure on,
-    reach out to us.</p></div>
+    reach out to us.</p></div>``
 </body>
 
 </html>
