--- a/_includes/common/libraries.html
+++ b/_includes/common/libraries.html
@@ -10,7 +10,8 @@
 <script>
     window.Pace || document.write('<script src="{{ site.baseurl }}/assets/javascripts/pace.min.js"><\/script>')
 </script>
-
+<script src="/assets/javascripts/vendor/foundation.js"></script>
+<script src="/assets/javascripts/app.js"></script>
 {% if site.google_analytics %}
     {% include common/analytics.html %}
 {% endif %}
