--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -58,6 +58,38 @@
         <h1>Store</h1>
         <p><span>Purchase clothing that makes a difference.  Proceeds go to feeding,
           clothing, and transitioning homeless.</span></p>
+          <div class="row"><div class="column">
+          <div class="product-card">
+  <div class="product-card-thumbnail">
+    <a href="#"><img src="https://placehold.it/180x180"/></a>
+  </div>
+  <h2 class="product-card-title"><a href="#">Sweatshirt</a></h2>
+  <span class="product-card-desc">Be Bold Street Ministries Black and white text.</span>
+  <span class="product-card-price">$50</span>
+  <div class="product-card-colors">
+    <button href="#" class="product-card-color-option"><img src="https://placehold.it/30x30"/></button>
+    <button href="#" class="product-card-color-option"><img src="https://placehold.it/30x30"/></button>
+    <button href="#" class="product-card-color-option"><img src="https://placehold.it/30x30"/></button>
+    <button href="#" class="product-card-color-option"><img src="https://placehold.it/30x30"/></button>
+  </div></div>
+  <div class="column">
+  <div class="product-card">
+<div class="product-card-thumbnail">
+<a href="#"><img src="https://placehold.it/180x180"/></a>
+</div>
+<h2 class="product-card-title"><a href="#">Sweatshirt</a></h2>
+<span class="product-card-desc">Be Bold Street Ministries Black and white text.</span>
+<span class="product-card-price">$50</span>
+<div class="product-card-colors">
+<button href="#" class="product-card-color-option"><img src="https://placehold.it/30x30"/></button>
+<button href="#" class="product-card-color-option"><img src="https://placehold.it/30x30"/></button>
+<button href="#" class="product-card-color-option"><img src="https://placehold.it/30x30"/></button>
+<button href="#" class="product-card-color-option"><img src="https://placehold.it/30x30"/></button>
+</div></div>
+</div>
+</div>
+
+
 
     </div>
     <div id="section3" class="section" data-name="events">
