MathJax for LaTeX support

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,6 +9,7 @@
 
 <head>
     {% include common/meta.html %}
+    {% include common/MathJax.html %}
     <link href='{{ site.baseurl }}/assets/stylesheets/blog.css' rel="stylesheet" type="text/css">
     {% include common/libraries.html %}
     {% if site.google_tag_manager %}
