--- a/_sass/simple-texture-home.scss
+++ b/_sass/simple-texture-home.scss
@@ -8,11 +8,11 @@
 @import 'simple-texture/home/fullpage';
 
 body {
-    font-family: $fonts-body;
+    font-family: 'Roboto', sans-serif;
     font-size: 18px;
     line-height: 36px;
 
-    color: $color-text-dark;
+    color: #191919;
 }
 
 h1 {
