--- a/_sass/simple-texture-home.scss
+++ b/_sass/simple-texture-home.scss
@@ -6,6 +6,7 @@
 @import 'simple-texture/common/pace';
 @import 'simple-texture/common/social-icons';
 @import 'simple-texture/home/fullpage';
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 body {
     font-family: 'Roboto', sans-serif;
